# obmc-yadro-webapp

./: .clang-format-include  .gitignore  .gitmodules  Dockerfile  Dockerfile.base  MAINTAINERS  README.md  dev.notes.txt  docker.test.sh  meson.build  meson_options.txt  yaweb.service.in
schemas/redfish/json-schema/: OemManager.v1_0_0.json  OemPCIeFunction.v1_0_0.json  OemPower.v1_0_0.json  OemThermal.v1_0_0.json
scripts/: run_clang_tidy.py
src/: account_settings.hpp  accounts.hpp  baseboard.hpp  certificates.hpp  chassis.hpp  common_fields.hpp  cpu.hpp  decorator_asset.hpp  definitions.hpp  drive.hpp  fan.hpp  firmware.hpp  formatters.hpp  includes.hpp  main.cpp  manager.hpp  memory.hpp  network_adapter.hpp  network_interface.hpp  network_protocol.hpp  network_provider.hpp  pcie.hpp  pcie_provider.hpp  pid_control.hpp  power.hpp  power_provider.hpp  psu.hpp  queries.cpp  relation_provider.hpp  roles.hpp  routes.cpp  sensors.hpp  server.hpp  session_manager.hpp  settings.hpp  status_provider.hpp  system_queries.cpp  system_queries.hpp  version_provider.hpp  virtual_media.hpp
src/core/: application.cpp  application.hpp  connection.cpp  connection.hpp  exceptions.hpp  request.cpp  request.hpp  response.cpp  response.hpp  router.cpp  router.hpp
src/core/broker/: broker.hpp  dbus_broker.cpp  dbus_broker.hpp
src/core/connect/: connect.hpp  dbus_connect.cpp  dbus_connect.hpp
src/core/entity/: dbus_query.cpp  dbus_query.hpp  enitty_manager.hpp  entity.cpp  entity.hpp  entity_interface.hpp  entity_manager.cpp  entity_manager.hpp  event.hpp  proxy_query.hpp  query.hpp
src/core/helpers/: compares.hpp  utils.hpp
src/core/route/handlers/: graphql_handler.cpp  graphql_handler.hpp
src/core/route/redfish/: error_messages.cpp  error_messages.hpp  node.hpp  redfish_root.hpp  response.cpp  response.hpp  router.hpp
src/http/: headers.hpp
src/logger/: logger.hpp
src/service/: authorization.hpp  configuration.hpp  pam_authenticate.hpp  session.cpp  session.hpp
subprojects/: 0001-ast-Add-support-the-Python-3-version.patch  0002-build-fix-bison-parser-includes.patch  fastcgi++.wrap  graphqlparser.wrap  nlohmann.wrap  phosphor-logging.wrap  sdbusplus.wrap
tests/conf/: bmcweb_persistent_data.json  lighttpd.conf
tests/data/: gql.test.ast  gql.test.response.json
tests/http/: headers_utest.cpp
tools/: .gitignore  meson.build
tools/redfish-gen/: .redfish-gen  main.py  meson.build  redfish-gen  redfish-gen-oem.sh  setup.py
tools/redfish-gen/assets/oem/: OemManagerNetworkProtocol_v1.xml  OemManager_v1.xml  OemPCIeFunction_v1.xml  OemPower_v1.xml  OemSession_v1.xml  OemThermal_v1.xml  OemVirtualMedia_v1.xml
tools/redfish-gen/redfish/: v1.yaml
tools/redfish-gen/redfish/v1/: CertificateService.yaml  Chassis.yaml  Managers.yaml  Systems.yaml
tools/redfish-gen/redfish/v1/AccountService/: LDAPCertificates.yaml
tools/redfish-gen/redfish/v1/AccountService/LDAPCertificates/: LDAPCertificateEp.yaml
tools/redfish-gen/redfish/v1/CertificateService/: CertificateLocations.yaml
tools/redfish-gen/redfish/v1/Chassis/: ChassisNode.yaml
tools/redfish-gen/redfish/v1/Chassis/ChassisNode/: Assembly.yaml  NetworkAdapters.yaml  PCIeDevices.yaml  Power.yaml  Sensors.yaml  Thermal.yaml
tools/redfish-gen/redfish/v1/Chassis/ChassisNode/NetworkAdapters/: NetworkAdapter.yaml
tools/redfish-gen/redfish/v1/Chassis/ChassisNode/NetworkAdapters/NetworkAdapter/: NetworkDeviceFunctions.yaml
tools/redfish-gen/redfish/v1/Chassis/ChassisNode/NetworkAdapters/NetworkAdapter/NetworkDeviceFunctions/: NetworkDeviceFunction.yaml
tools/redfish-gen/redfish/v1/Chassis/ChassisNode/PCIeDevices/: PCIeDevice.yaml
tools/redfish-gen/redfish/v1/Chassis/ChassisNode/PCIeDevices/PCIeDevice/: PCIeFunctions.yaml
tools/redfish-gen/redfish/v1/Chassis/ChassisNode/PCIeDevices/PCIeDevice/PCIeFunctions/: PCIeFunction.yaml
tools/redfish-gen/redfish/v1/Chassis/ChassisNode/Sensors/: SensorNode.yaml
tools/redfish-gen/redfish/v1/Managers/: BmcManager.yaml
tools/redfish-gen/redfish/v1/Managers/BmcManager/: Certificates.yaml  EthernetInterfaces.yaml  NetworkProtocol.yaml  VirtualMedia.yaml
tools/redfish-gen/redfish/v1/Managers/BmcManager/Certificates/: CertificatesTruststore.yaml
tools/redfish-gen/redfish/v1/Managers/BmcManager/EthernetInterfaces/: EthernetInterfaceNode.yaml
tools/redfish-gen/redfish/v1/Managers/BmcManager/EthernetInterfaces/EthernetInterfaceNode/: VLANs.yaml
tools/redfish-gen/redfish/v1/Managers/BmcManager/EthernetInterfaces/EthernetInterfaceNode/VLANs/: VLANNode.yaml
tools/redfish-gen/redfish/v1/Managers/BmcManager/NetworkProtocol/: HTTPSCertificates.yaml
tools/redfish-gen/redfish/v1/Managers/BmcManager/NetworkProtocol/HTTPSCertificates/: HTTPSCertificateEp.yaml
tools/redfish-gen/redfish/v1/Managers/BmcManager/VirtualMedia/: VirtualMediaEp.yaml
tools/redfish-gen/redfish/v1/Systems/: System.yaml
tools/redfish-gen/redfish/v1/Systems/System/: Bios.yaml  LogServices.yaml  Memory.yaml  NetworkInterfaces.yaml  Processors.yaml  Storage.yaml
tools/redfish-gen/redfish/v1/Systems/System/Memory/: MemoryNode.yaml
tools/redfish-gen/redfish/v1/Systems/System/NetworkInterfaces/: NetworkInterface.yaml
tools/redfish-gen/redfish/v1/Systems/System/Processors/: ProcessorNode.yaml
tools/redfish-gen/redfish/v1/Systems/System/Storage/: StorageNode.yaml
tools/redfish-gen/redfish/v1/Systems/System/Storage/StorageNode/: DriveNode.yaml
tools/redfish-gen/redfish_gen/: __init__.py  generator.py  globals.py  node_parameter.py  property.py  redfish_base.py  redfish_node.py  redfish_schema.py
tools/redfish-gen/redfish_gen/templates/: collection.property.mako  entity.source.mako  enum.mako  fragment.mako  link.property.mako  node.dynamic.entity.mako  node.dynamic.static.mako  node.hpp.mako  oem.property.mako  related.items.property.mako
